# Agent-Platform

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  compose.yml  go.work  go.work.sum  pom.xml  pyproject.toml
apps/agent-studio/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
backend/: .env.example  go.mod
docs/aihub/: features.md
docs/architecture/: iam-service-features.md  iam-service-flows.md
infrastructure/docker/: compose.yml
libs/go/: go.mod  go.sum
libs/java/: pom.xml
libs/python/: pyproject.toml
libs/python/src/common/: __init__.py  config.py  logger.py  postgres.py  redis.py  storage.py
migrations/postgres/: init.sql
migrations/redis/: users.acl
services/access-service/: .env.example  Dockerfile  pom.xml
services/agent-orchestrator/: Dockerfile  go.mod
services/agent-studio-web/: .env.example  Dockerfile  nginx.conf  package.json  (+2 more)
services/aihub/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
services/aihub/app/: main.py
services/aihub/app/infrastructure/models/: base.py
services/aihub/app/infrastructure/models/embeddings/: base.py  minilm.py
services/aihub/app/services/: embeddings.py
services/aihub/scripts/: download_models.py
services/aihub/src/: config.py  dependencies.py  main.py
services/aihub/src/adapters/: base.py  local.py  openai_compatible.py  registry.py
services/aihub/src/api/: analytics.py  chat.py  dependencies.py  embedding.py  model_config.py  model_usage_log.py  providers.py  rerank.py
services/aihub/src/application/repositories/: model_config.py  model_usage.py
services/aihub/src/application/services/: embedding.py
services/aihub/src/domain/factories/: base.py  embedding.py
services/aihub/src/domain/models/: base.py  embedding.py  rerank.py
services/aihub/src/domain/registry/: model.py
services/aihub/src/domain/run_time/: model_manager.py
services/aihub/src/infrastructure/models/huggingface/: embedding.py
services/aihub/src/middleware/: auth.py
services/aihub/src/models/: auth.py  chat.py  embedding.py  model_config.py  rerank.py
services/aihub/src/presentation/controllers/: __init__.py  embedding.py  rerank.py
services/aihub/src/presentation/dtos/: embedding.py
services/aihub/src/repositories/: __init__.py  model_config.py  model_usage_log.py  providers.py
services/aihub/src/services/: entitlement.py  router.py
services/aihub/src/services/api/: chat.py
services/aihub/src/services/local/: embedding.py  rerank.py
services/aihub/src/utils/: crypto.py
services/aihub/tests/: conftest.py  test_analytics.py  test_entitlement.py
(+622 files in other folders)
