[project]
name = "agent-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/python",
    "services/aihub",
]

[dependency-groups]
dev = [
    "locust>=2.43.3",
    "pydantic-settings>=2.13.1",
]
