[project]
name = "aihub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fastapi>=0.135.1",
    "httpx>=0.28.0",
    "sentence-transformers>=3.0.0",
    "uvicorn>=0.41.0",
]

[tool.uv.sources]
common = { workspace = true }
