[project]
name = "aihub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common",
    "cryptography>=44.0.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.0",
    "PyJWT>=2.10.0",
    "python-multipart>=0.0.9",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "uvicorn[standard]>=0.41.0",
]

[tool.uv.sources]
common = { workspace = true }
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
